--- a/components/main.scss
+++ b/components/main.scss
@@ -4,3 +4,5 @@
 @import "./button/button.scss";
 @import "./tag/tag.scss";
 @import "./nav/nav.scss";
+@import "./horizontalCarousel/horizontal-carousel.scss";
+@import "./testimonialCard/testimonial-card.scss";
