--- a/components/nav/nav.scss
+++ b/components/nav/nav.scss
@@ -3,8 +3,7 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 52px 70px;
-    height: $menuHeight;
+    padding: 52px 70px 116px 70px;
 
     &__content{
         // width: 30%;
