Finished HomePage and Product Page

--- a/components/main.scss
+++ b/components/main.scss
@@ -6,3 +6,4 @@
 @import "./nav/nav.scss";
 @import "./horizontalCarousel/horizontal-carousel.scss";
 @import "./testimonialCard/testimonial-card.scss";
+@import "./footer/footer.scss";
