--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -127,6 +127,93 @@
         align-items: center;
         justify-content: space-around;
         margin-top: 125px;
+
+        &__service{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            &__title{
+                font-size: 24px;
+                line-height: 27px;
+                letter-spacing: 0.02em;
+                margin-top: 55px;
+            }
+        }
+    }
+
+    &__strategic-design{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 36px;
+        line-height: 45px;
+        margin-top: 280px;
+        /* or 125% */
+        text-align: center;
+        letter-spacing: 0.02em;
+        border-bottom: 1px solid #E5E5E5;
+        &__text{
+            max-width: 780px;
+            margin-bottom: 120px;
+        }
+    }
+
+    &__case-studies{
+        margin-top: 80px;
+        width: 100%;
+        margin-bottom: 120px;
+        &__title{
+            color: $purple;
+            font-size: 16px;
+            letter-spacing: 0.02em;
+            line-height: 18px;
+        }
+        &__subtitle{
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-end;
+            &__text{
+                font-size: 36px;
+                line-height: 41px;
+                letter-spacing: 0.02em;
+                color:#fff;
+            }
+        }
+        &__list{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 120px;
+            &__case{
+                width: 50%;
+                display: flex;
+                &__logo{
+                    width: 310px;
+                    height: 310px;
+                }
+                &__content{
+                    margin-left: 30px;
+                    margin-right: 10px;
+                    &__text{
+                        margin-top: 65px;
+                        font-size: 24px;
+                        line-height: 33px;
+                        letter-spacing: 0.02em;
+                        color: #fff;
+                    }
+                    &__tags{
+                        margin-top: 28px;
+                        display: flex;
+                        justify-content: flex-start;
+                        &__tag{
+                            margin-right: 8px;
+                        }
+                    }
+                }
+            }
+        }
     }
 
 }
