work filtering logic done

--- a/components/main.scss
+++ b/components/main.scss
@@ -7,3 +7,4 @@
 @import "./horizontalCarousel/horizontal-carousel.scss";
 @import "./testimonialCard/testimonial-card.scss";
 @import "./footer/footer.scss";
+@import "./caseStudy/case-study.scss";
