--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,7 +2,8 @@
 @import "variables";
 @import "reset";
 @import "home";
-@import "services";
+@import "work";
+@import "moov";
 
 body, html{
     background-color: $background;
