--- a/components/caseStudy/case-study.scss
+++ b/components/caseStudy/case-study.scss
@@ -2,6 +2,7 @@
     width: 431px;
     height: 411px;
     position: relative;
+    cursor: pointer;
     &.olie{
         background-image: url('/assets/olie-case.png');
         background-size: 100%;
