accordion and services done

--- a/components/main.scss
+++ b/components/main.scss
@@ -8,3 +8,4 @@
 @import "./testimonialCard/testimonial-card.scss";
 @import "./footer/footer.scss";
 @import "./caseStudy/case-study.scss";
+@import "./accordion/accordion.scss";
