--- a/styles/_services.scss
+++ b/styles/_services.scss
@@ -60,4 +60,15 @@
             }
         }
     }
+    &__final-words{
+        text-align: center;
+        font-size: 48px;
+        line-height: 58px;
+        text-align: center;
+        letter-spacing: 0.02em;
+        margin-top: 160px;
+    }
+    &__table{
+        margin-top: 160px;
+    }
 }
