--- a/components/main.scss
+++ b/components/main.scss
@@ -9,3 +9,4 @@
 @import "./footer/footer.scss";
 @import "./caseStudy/case-study.scss";
 @import "./accordion/accordion.scss";
+@import "./table/table.scss";
