lottie animation V1 Done

--- a/components/main.scss
+++ b/components/main.scss
@@ -10,3 +10,4 @@
 @import "./caseStudy/case-study.scss";
 @import "./accordion/accordion.scss";
 @import "./table/table.scss";
+@import "./processAnimation/process.scss";
