--- a/styles/_studio.scss
+++ b/styles/_studio.scss
@@ -77,10 +77,18 @@
         text-align: left;
         &__row{
             width: 100%;
+            display: flex;
+            align-items: center;
+            &__image{
+                width: 110px;
+                margin: 0 40px;
+                &.left{
+                    margin-left: 0;
+                }
+            }
         }
     }
     &__process{
-        margin-top: 120px;
         width: 100%;
     }
     &__final-imgs{
