logo on hover state added

--- a/components/caseStudy/case-study.scss
+++ b/components/caseStudy/case-study.scss
@@ -4,7 +4,7 @@
     position: relative;
     cursor: pointer;
     &.olie{
-        background-image: url('/assets/olie-case.png');
+        background-image: ('/assets/olie-case.png');
         background-size: 100%;
     }
     &.consult{
