media queries on

--- a/components/nav/nav.scss
+++ b/components/nav/nav.scss
@@ -17,7 +17,7 @@
             background-position-x: 4px;
             cursor: pointer;
             img{
-                display: none;
+                opacity: 0;
                 width: 100px;
 
             }
