--- a/components/layout/layout.scss
+++ b/components/layout/layout.scss
@@ -1,8 +1,16 @@
 .ic-layout-wrapper{
+    padding: 0 70px;
+    height: $contentHeight;
     width: 100%;
-    height: 100%;
-    footer{
-        position: absolute;
-        bottom: 0;
+    
+    @include tablet {
+        padding: 0 50px;
+        background-color: red;
     }
+    
+    @include mobile {
+        padding: 0 32px;
+        background-color: blue;
+    }
+    
 }
