--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,3 +19,15 @@ body, html{
     width: 100%;
     height: 100%;
 }
+
+.hide-mobile{
+    @include mobile {
+        display: none !important;
+    }
+}
+
+.hide-desktop{
+    @include desktop {
+        display: none !important;
+    }
+}
