--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -1,6 +1,9 @@
 .ic-home-wrapper{
     padding: 0 70px;
     height: $contentHeight;
+    @include mobile {
+        padding: 0;
+    }
     &__title{
         width: 100%;
         height: 100%;
@@ -12,19 +15,39 @@
             line-height: 140px;
             letter-spacing: 0.02em;
             color: #fff;
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            @include mobile {
+                font-size: 68px;
+                line-height: 100px;
+            }
             &__gif1{
                 height: 103px;
                 padding: 0 50px;
+                @include mobile {
+                    height: 80px;
+                    padding: 0 0 0 30px;
+                }
             }
 
             &__gif2{
                 height: 103px;
                 padding: 0 50px 0 0;
+                @include mobile {
+                    height: 80px;
+                    padding: 0 30px 0 0;
+                }
             }
 
             &__gif3{
                 height: 103px;
                 padding: 0 50px;
+                @include mobile {
+                    height: 80px;
+                    padding: 0;
+                    margin-top: 20px;
+                }
             }
         }
     }
@@ -39,6 +62,11 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        @include mobile {
+            font-size: 20px;
+            line-height: 24px;
+            margin-top: 100px;
+        }
     }
 
     &__image-showcase{
@@ -49,6 +77,9 @@
         margin-top: 100px;
         &__img{
             width: 100%;
+        }
+        @include mobile {
+            margin-top: 40px;
         }
     }
 
@@ -66,6 +97,14 @@
         &__button{
             margin-top: 40px;
         }
+        @include mobile {
+            font-size: 20px;
+            line-height: 24px;
+            flex-direction: row;
+            flex-wrap: wrap;
+            padding: 0 50px;
+            margin-top: 60px;
+        }
     }
 
     &__testimonials{
@@ -74,11 +113,18 @@
         display: flex;
         flex-direction: column;
         margin-bottom: 258px;
+        @include mobile{
+            margin-top: 95px;
+        }
         &__title{
             color: $purple;
             font-size: 16px;
             line-height: 18px;
             letter-spacing: 0.02em;
+            @include mobile{
+                font-size: 14px;
+                line-height: 17px;
+            }
         }
         &__subtitle{
             font-size: 36px;
@@ -86,16 +132,30 @@
             letter-spacing: 0.02em;
             color: #fff;
             margin-top: 15px;
+
+            @include mobile{
+                font-size: 20px;
+                line-height: 24px;
+            }
+
         }
         &__list{
             margin-top: 100px;
             width: calc(100% + $mainPadding);
+            @include mobile{
+                margin-top: 67px;
+                width: calc(100% + 30px);
+
+            }
         }
     }
 
     &__mission{
         width: 100%;
         margin-top: 240px;
+        @include mobile{
+            margin-top: 120px;
+        }
         &__row{
             width: 100%;
             text-align: left;
@@ -105,19 +165,44 @@
             color: #fff;
             display: flex;
             align-items: center;
+            flex-wrap: wrap;
+
+            @include mobile {
+                font-size: 48px;
+                line-height: 58px;
+                flex-wrap: wrap;
+                margin-top: 18px;
+            }
             &__gif1{
                 height: 103px;
                 padding: 0 50px;
+                @include mobile {
+                    height: 60px;
+                    padding: 0 0 0 30px;
+                }
             }
 
             &__gif2{
                 height: 103px;
                 padding: 0 50px 0 0;
+                @include mobile {
+                    height: 60px;
+                    padding: 0 0 0 30px;
+                }
             }
 
             &__gif3{
                 height: 103px;
                 padding: 0 50px;
+                @include mobile {
+                    height: 60px;
+                    padding: 0 0 0 30px;
+                }
+            }
+        }
+        &__button{
+            @include mobile{
+                margin-top: 40px;
             }
         }
     }
@@ -127,17 +212,34 @@
         align-items: center;
         justify-content: space-around;
         margin-top: 125px;
+        
+        @include mobile{
+            margin-top: 75px;
+            flex-direction: column;
+        }
 
         &__service{
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            @include mobile{
+                margin-bottom: 60px;
+                img{
+                    width: 160px;
+                }
+            }
             &__title{
                 font-size: 24px;
                 line-height: 27px;
                 letter-spacing: 0.02em;
                 margin-top: 55px;
+                @include mobile{
+                    font-size: 16px;
+                    line-height: 19px;
+                    letter-spacing: 0.02em;
+                    margin-top: 30px;
+                }
             }
         }
     }
@@ -153,9 +255,18 @@
         text-align: center;
         letter-spacing: 0.02em;
         border-bottom: 1px solid #E5E5E5;
+        @include mobile{
+            margin-top: 120px
+        }
         &__text{
             max-width: 780px;
             margin-bottom: 120px;
+            @include mobile{
+                margin-bottom: 60px;
+                font-size: 20px;
+                line-height: 24px;
+                text-align: center;
+            }
         }
     }
 
@@ -163,22 +274,36 @@
         margin-top: 80px;
         width: 100%;
         margin-bottom: 120px;
+        @include mobile{
+            margin-bottom: 100px;
+            margin-top: 40px;
+        }
         &__title{
             color: $purple;
             font-size: 16px;
             letter-spacing: 0.02em;
             line-height: 18px;
+            @include mobile{
+                font-size: 14px;
+                line-height: 17px;
+            }
         }
         &__subtitle{
             width: 100%;
             display: flex;
             justify-content: space-between;
             align-items: flex-end;
+            
             &__text{
                 font-size: 36px;
                 line-height: 41px;
                 letter-spacing: 0.02em;
                 color:#fff;
+                @include mobile{
+                    margin-top: 17px;
+                    line-height: 24px;
+                    font-size: 20px;
+                }
             }
         }
         &__list{
@@ -186,22 +311,43 @@
             justify-content: center;
             align-items: center;
             margin-top: 120px;
+            @include mobile{
+                flex-direction: column;
+                margin-top: 20px;
+            }
             &__case{
                 width: 50%;
                 display: flex;
+                @include mobile{
+                    flex-direction: column;
+                    width: 100%;
+                    margin-top: 40px;
+                }
                 &__logo{
                     width: 310px;
                     height: 310px;
+                    @include mobile{
+                        width: 100%;
+                        height: auto;
+                    }
                 }
                 &__content{
                     margin-left: 30px;
                     margin-right: 10px;
+                    @include mobile{
+                        margin: 0;
+                    }
                     &__text{
                         margin-top: 65px;
                         font-size: 24px;
                         line-height: 33px;
                         letter-spacing: 0.02em;
                         color: #fff;
+                        @include mobile{
+                            font-size: 16px;
+                            line-height: 24px;
+                            margin: 30px 0 20px 0;
+                        }
                     }
                     &__tags{
                         margin-top: 28px;
