--- a/components/nav/nav.scss
+++ b/components/nav/nav.scss
@@ -3,7 +3,10 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    padding: 52px 70px 116px 70px;
+    padding: 52px 70px 50px 70px;
+    position: sticky;
+    top: 0;
+    background-color: $background;
     @include mobile {
         padding: 50px 0 116px 0px;
 
