--- a/components/processAnimation/process.scss
+++ b/components/processAnimation/process.scss
@@ -7,11 +7,37 @@
         height: 425px;
     }
     &__scrollable{
-        margin-top: 470px;
+        height: 100%;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        &__container{
+            height: 100%;
+            display: flex;
+            position: relative;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
         &__text{
             max-width: 420px;
             margin-left: 130px;
             margin-top: 530px;
+            height: 100%;
+            position: sticky;
+            top: 30%;
+            transition: all 0.5s ease-in-out;
+            background-color: $background;
+            
+            &.hide{
+                opacity: 0;
+                transform: translateY(-50px);
+            }
+            &:not(.hide) {
+                opacity: 1;
+            }
             &__slash{
                 font-size: 36px;
                 line-height: 43px;
