mobile lottie animation DONE :)

--- a/components/main.scss
+++ b/components/main.scss
@@ -11,3 +11,4 @@
 @import "./accordion/accordion.scss";
 @import "./table/table.scss";
 @import "./processAnimation/process.scss";
+@import "./processAnimationMobile/process.scss";
