--- a/styles/_moov.scss
+++ b/styles/_moov.scss
@@ -1,5 +1,5 @@
 .ic-moov-wrapper{
-    padding: 0 70px;
+    // padding: 0 70px;
     height: $contentHeight;
     width: 100%;
     &__title{
@@ -10,6 +10,9 @@
         align-items: center;
         flex-direction: column;
         border-bottom: 1px solid #FFFFFF;
+        @include mobile{
+            padding-bottom: 20px;
+        }
         &__name{
             font-size: 24px;
             line-height: 27px;
@@ -17,6 +20,10 @@
             letter-spacing: 0.02em;
 
             color: #BC473B;
+            @include mobile{
+                font-size: 16px;
+                line-height: 19px;
+            }
         }
         &__text{
             margin-top: 20px;
@@ -25,12 +32,20 @@
             line-height: 55px;
             text-align: center;
             color: #fff;
+            @include mobile{
+                font-size: 32px;
+                line-height: 38px;
+            }
         }
         &__details{
             margin-top: 38px;
             display: flex;
             justify-content: space-between;
             width: 260px;
+            @include mobile{
+                justify-content: center;
+                margin-top: 0;
+            }
             &__date{
                 font-size: 16px;
                 line-height: 18px;
@@ -38,12 +53,18 @@
                 letter-spacing: 0.02em;
 
                 color: #C4C4C4;
+                @include mobile{
+                    padding: 20px;
+                }
             }
             &__website{
                 font-size: 16px;
                 line-height: 19px;
                 letter-spacing: 0.02em;
                 color: #FFF;
+                @include mobile{
+                    padding: 20px;
+                }
             }
         }
     }
@@ -52,12 +73,20 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @include mobile{
+            flex-direction: column;
+        }
         &__text{
             font-size: 24px;
             line-height: 33px;
             letter-spacing: 0.01em;
             color: #FFFFFF;
             width: 640px;
+            @include mobile{
+                font-size: 16px;
+                line-height: 24px;
+                width: 100%;
+            }
         }
         &__tags{
             width: 160px;
@@ -66,6 +95,16 @@
             flex-direction: column;
             justify-content: space-between;
             align-items: flex-end;
+            @include mobile{
+                width: 100%;
+                margin-top: 20px;
+                align-items: flex-start;
+                justify-content: space-around;
+                height: 180px;
+                .tag{
+                    height: 28px;
+                }
+            }
         }
     }
     &__gallery{
@@ -73,6 +112,9 @@
         img{
             width: 100%;
             margin-bottom: 40px;
+            @include mobile{
+                margin-bottom: 20px;
+            }
         }
     }
     &__final{
@@ -82,15 +124,30 @@
         flex-direction: column;
         align-items: center;
         margin-bottom: 200px;
+        @include mobile{
+            margin-top: 20px;
+        }
         &__text{
             font-size: 36px;
             line-height: 41px;
             text-align: center;
             letter-spacing: 0.02em;
             color: #FFFFFF;
+            @include mobile{
+                width: 100%;
+                font-size: 20px;
+                line-height: 24px;
+            }
         }
         &__img{
             margin-top: 180px;
+            @include mobile{
+                width: 100%;
+                margin-top: 80px;
+                img{
+                    width: 100%;
+                }
+            }
         }
     }
 }
